<resources>
    <string name="app_name">MVPdemo1</string>
    <string name="enter_contact">Enter Contact</string>
    <string name="contact">Contact</string>
    <string name="enter_age">Enter Age</string>
    <string name="age">Age</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="submit">Submit</string>
    <string name="without_permissions">Media Unavailable</string>
    <string name="it_looks_you_locked_permissions_">It looks you didn\\\'t allow this app to use your         camera or external storage. This is necessary to take pictures and save then to your         devices. Please go to permissions screen, find MyInsta and unlock this permissions to         use the app.</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="main">Main</string>
    <string name="add_profile">Add Profile</string>
    <string name="enter_description">EnterDescription</string>
    <string name="describe_the_accident">Describe the Accident</string>
    <string name="select_location">Select Location</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_title">Enter Title</string>
    <string name="title">Title</string>
    <string name="select_date_and_time">Select Date And Time</string>
    <string name="date_time_of_accident">Date and Time of Accident</string>
    <string name="other_accident">Other Accident</string>
    <string name="work_place_accident">Work Place Accident</string>
    <string name="road_accident">Road Accident</string>
    <string name="type_of_accident">Type of Accident</string>
    <string name="accident_details">Accident Details</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="findwitness">Find Witness</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
</resources>
